Add default style

--- a/src/sass/components/book.module.scss
+++ b/src/sass/components/book.module.scss
@@ -13,7 +13,9 @@
       list-style: none;
       padding: 0;
       gap: 2rem;
+
       .menuItem {
+        background-color: transparent;
       }
     }
   }
