Add globals and mixins

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,35 @@
+$primary: #f76e11;
+
+// MEDIA BREAKPOINTS
+$grid-breakpoints: (
+  xs: 0,
+  sm: 576px,
+  md: 768px,
+  lg: 992px,
+  xl: 1200px,
+  xxl: 1400px,
+);
+
+@mixin breakpoint-up($breakpoint) {
+  // If the breakpoint exists in the map.
+  @if map-has-key($grid-breakpoints, $breakpoint) {
+    // Get the breakpoint value.
+    $breakpoint-value: map-get($grid-breakpoints, $breakpoint);
+
+    // Write the media query.
+    @media (min-width: $breakpoint-value) {
+      @content;
+    }
+
+    // If the breakpoint doesn't exist in the map.
+  }
+
+  @else {
+    // Log a warning.
+    @warn 'Invalid breakpoint: #{$breakpoint}.';
+  }
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -7,7 +39,7 @@
 body {
   margin: 0;
   font-family:
-    -apple-system,
+    'Poppins',
     BlinkMacSystemFont,
     'Segoe UI',
     'Roboto',
@@ -23,16 +55,38 @@ body {
   background-color: rgb(244, 245, 249);
 }
 
-code {
-  font-family:
-    source-code-pro,
-    Menlo,
-    Monaco,
-    Consolas,
-    'Courier New',
-    monospace;
+.paddingX {
+  padding-inline: 5vw;
 }
 
-.paddingX {
-  padding-inline: 5rem;
+.btn {
+  background-color: $primary;
+  padding: 0.5rem 2rem;
+  color: #fff;
+  border: 2px solid $primary;
+  font-weight: 300;
+  border-radius: 5px;
+  box-shadow: 2px 5px 10px rgb(0 0 0 / 0.3);
+  cursor: pointer;
+
+  &:hover {
+    background-color: rgba($primary, $alpha: 0.7);
+    border-color: rgba($primary, $alpha: 0.7);
+    color: #000;
+  }
+
+  &:active,
+  &:focus {
+    box-shadow: none;
+    border-color: transparent;
+  }
+}
+
+.link {
+  background-color: transparent;
+  color: $primary;
+  cursor: pointer;
+  border: 0;
+  font-size: 1rem;
+  font-weight: 100;
 }
