--- a/src/sass/components/book.module.scss
+++ b/src/sass/components/book.module.scss
@@ -16,7 +16,10 @@
 
   .header {
     flex: 2;
-
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 2rem;
     .bookHeaderMenu {
       display: flex;
       list-style: none;
@@ -39,5 +42,8 @@
 
   .update {
     flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
   }
 }
